add setup setting

--- a/FlowModelDesktop/FlowModelDesktop.csproj
+++ b/FlowModelDesktop/FlowModelDesktop.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="database_theapplication_3365.ico" />
+  </ItemGroup>
+
+  <ItemGroup>
     <COMReference Include="Microsoft.Office.Interop.Excel">
       <WrapperTool>tlbimp</WrapperTool>
       <VersionMinor>9</VersionMinor>
@@ -17,6 +21,10 @@
       <Isolated>false</Isolated>
       <EmbedInteropTypes>true</EmbedInteropTypes>
     </COMReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="database_theapplication_3365.ico" />
   </ItemGroup>
 
   <ItemGroup>
